--- a/PesquisaCEP/PesquisaCEP/Views/NewItemPage.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/NewItemPage.xaml
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:PesquisaCEP.Behaviours"
              x:Class="PesquisaCEP.Views.NewItemPage"
              Shell.PresentationMode="ModalAnimated"
              Title="New Item">
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Text, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Description, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Entry Placeholder="Digite aqui o CEP desejado." 
+                   Text="{Binding Text, Mode=TwoWay}" FontSize="Medium" 
+                   Keyboard="Numeric">
+                <Entry.Behaviors>
+                    <local:ApenasNumeros/>
+                </Entry.Behaviors>
+            </Entry>                   
+                   
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
