--- a/PesquisaCEP/PesquisaCEP/Views/NewItemPage.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/NewItemPage.xaml
@@ -6,12 +6,10 @@
              Title="New Item">
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Entry Placeholder="Digite aqui o CEP desejado." 
+            <Entry x:Name="EntryCep" Placeholder="Digite aqui o CEP desejado." 
                    Text="{Binding Text, Mode=TwoWay}" FontSize="Medium" 
-                   Keyboard="Numeric">
-                <Entry.Behaviors>
-                    <local:ApenasNumeros/>
-                </Entry.Behaviors>
+                   Keyboard="Numeric"
+                   TextChanged="EntryCep_TextChanged">
             </Entry>                   
                    
             <StackLayout Orientation="Horizontal">
