Removidas páginas que não serão utilizadas. A tela agora mostra as informações do CEP retornado. Tratamentos adicionais para caso o CEP digitado seja inválido.

--- a/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisaLocal.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisaLocal.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PesquisaCEP.Views.ItemsPage"
-             Title="{Binding Title}"
+             x:Class="PesquisaCEP.Views.PaginaPesquisaLocal"
+             Title="Pesquisa Local"
              xmlns:local="clr-namespace:PesquisaCEP.ViewModels"  
              xmlns:model="clr-namespace:PesquisaCEP.Models"  
              x:Name="BrowseItemsPage">
