--- a/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisarCEP.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisarCEP.xaml
@@ -1,28 +1,30 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PesquisaCEP.Views.NewItemPage"
+             x:Class="PesquisaCEP.Views.PaginaPesquisarCEP"
              Shell.PresentationMode="ModalAnimated"
-             Title="New Item">
+             Title="Pesquisa Online">
     <ContentPage.Content>
 
         <StackLayout Spacing="3" Padding="15" VerticalOptions="Center">
-           
             <StackLayout x:Name="StackLayoutConexaoInternet" IsVisible="false">
                 <Image Source="nosignal.png" WidthRequest="40"></Image>
                 <Label Text="Dispositivo Sem Conexão com a Internet" HorizontalOptions="Center"></Label>
                 <Button Text="Clique Aqui Para Tentar Novamente" Clicked="Button_Clicked"></Button>
             </StackLayout>
-            <StackLayout x:Name="StackLayoutPesquisa">
-                <Entry x:Name="EntryCep" Placeholder="Digite aqui o CEP desejado." 
+            <StackLayout x:Name="StackLayoutPesquisa" VerticalOptions="Center">
+                <StackLayout Padding="0 0 0 0">
+                    <Entry x:Name="EntryCep" Placeholder="Digite aqui o CEP desejado." 
                    Text="{Binding CEP, Mode=TwoWay}" FontSize="Medium" 
                    Keyboard="Numeric"
                    TextChanged="EntryCep_TextChanged">
-                </Entry>
+                    </Entry>
 
-                <StackLayout Orientation="Horizontal">
-                    <Button x:Name="ButtonPesquisar" IsEnabled="False" Clicked="ButtonPesquisar_Clicked" Text="Pesquisar" Command="{Binding ComandoPesquisar}" HorizontalOptions="FillAndExpand"></Button>
+                    <StackLayout Orientation="Horizontal">
+                        <Button x:Name="ButtonPesquisar" IsEnabled="False" Clicked="ButtonPesquisar_Clicked" Text="Pesquisar" Command="{Binding ComandoPesquisar}" HorizontalOptions="FillAndExpand"></Button>
+                    </StackLayout>
                 </StackLayout>
+                <Label Text="{Binding ResultadoString}" FontSize="14" LineBreakMode="WordWrap" Padding="25 0 0 0 "></Label>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
