--- a/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisarCEP.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/PaginaPesquisarCEP.xaml
@@ -13,13 +13,18 @@
                 <Button Text="Clique Aqui Para Tentar Novamente" Clicked="Button_Clicked"></Button>
             </StackLayout>
             <StackLayout x:Name="StackLayoutPesquisa" VerticalOptions="Center">
+                <Label Text="{Binding NumeroDeEnderecosCadastrados}" Padding="0, 0, 0, 25" FontSize="14" FontAttributes="Bold"></Label>
                 <StackLayout Padding="0, 0, 0, 25">
                     <Entry x:Name="EntryCep" Placeholder="Digite aqui o CEP desejado." 
                    Text="{Binding CEP, Mode=TwoWay}" FontSize="Medium" 
                    Keyboard="Numeric"
                    TextChanged="EntryCep_TextChanged">
                     </Entry>
-                    <Button x:Name="ButtonPesquisar" IsEnabled="False" Clicked="ButtonPesquisar_Clicked" Text="Pesquisar" Command="{Binding ComandoPesquisar}" HorizontalOptions="FillAndExpand"></Button>
+                    <Button x:Name="ButtonPesquisar" IsEnabled="False" 
+                            Clicked="ButtonPesquisar_Clicked" Text="Pesquisar" 
+                            Command="{Binding ComandoPesquisar}" 
+                            HorizontalOptions="FillAndExpand"
+                            BackgroundColor="Crimson"></Button>
                 </StackLayout>
                 <Frame OutlineColor="Black" Padding="25, 25, 0, 25">
                     <Label x:Name="LabelResultado" Text="{Binding ResultadoString}" FontSize="14" LineBreakMode="WordWrap"
@@ -27,7 +32,8 @@
                 </Frame>
                 <StackLayout Padding="0, 25, 0, 0">
                     <Button x:Name="ButtonSalvar" IsEnabled="False" Text="Salvar CEP" 
-                        Command="{Binding ComandoSalvar}" HorizontalOptions="FillAndExpand"></Button>
+                        Command="{Binding ComandoSalvar}" HorizontalOptions="FillAndExpand"
+                            BackgroundColor="Crimson"></Button>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
