--- a/PesquisaCEP/PesquisaCEP/Views/PaginaDetalhesCEP.xaml
+++ b/PesquisaCEP/PesquisaCEP/Views/PaginaDetalhesCEP.xaml
@@ -1,14 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PesquisaCEP.Views.ItemDetailPage"
+             x:Class="PesquisaCEP.Views.PaginaDetalhesCEP"
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Small"/>
+        <Label x:Name="LabelResultado" Text="{Binding ResultadoString}" FontSize="14" LineBreakMode="WordWrap"></Label>
     </StackLayout>
     
 </ContentPage>
